<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, PclTestAppActivity!</string>
    <string name="app_name">PclTestApp</string>
    <string name="unitary_test">PclTestApp - Unitary Tests</string>
    <string name="loop_test">PclTestApp - Loop Tests</string>
    <string name="barcode_test">PclTestApp - Barcode Tests</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="TextView_serverstatus">Server Status:</string>
    <string name="button_printtext">Print Text</string>
    <string name="edit_printtext">Sample Text</string>
    <string name="button_gettime">Get Time</string>
    <string name="button_printbitmap">Print Bitmap</string>
    <string name="button_storelogo">Store Logo</string>
    <string name="button_printlogo">Print Logo</string>
    <string name="button_settime">Set Time</string>
    <string name="button_getterminfo">Get Term. Info</string>
    <string name="button_gettermcomp">Get Term. Comp.</string>
    <string name="button_dotransaction">Do Trans.</string>
    <string name="button_dotransactionex">Do Trans. Ext.</string>
    <string name="button_doupdate">Update Term.</string>
    <string name="button_resetterm">Reset Term.</string>
    <string name="button_openbarcode">Open Barcode</string>
    <string name="button_closebarcode">Close Barcode</string>
    <string name="button_getfwbarcode">Get Fw</string>
    <string name="button_F1">F1</string>
    <string name="button_F2">F2</string>
    <string name="button_OK">OK</string>
    <string name="button_F3">F3</string>
    <string name="button_F4">F4</string>
    <string name="button_UP">UP</string>
    <string name="button_DOWN">DN</string>
    <string name="button_Num1">1</string>
    <string name="button_Num2">2</string>
    <string name="button_Num3">3</string>
    <string name="button_Num4">4</string>
    <string name="button_Num5">5</string>
    <string name="button_Num6">6</string>
    <string name="button_Num7">7</string>
    <string name="button_Num8">8</string>
    <string name="button_Num9">9</string>
    <string name="button_F">F</string>
    <string name="button_Num0">0</string>
    <string name="button_Dot">.</string>
    <string name="input_simul">Input Simulator</string>
    <string name="button_inputsimul">Input Simul</string>
    <string name="button_Cancel">X</string>
    <string name="button_Valid">O</string>
    <string name="button_Corr">&lt;</string>
    <string name="button_test">Test</string>
    <string name="button_sendmsg">Send Msg</string>
    <string name="button_recvmsg">Recv Msg</string>
    <string name="button_flushmsg">Flush Msg</string>
    <string name="button_m2osshortcut">M2OS Shortcut</string>
    <string name="button_printerstatus">Printer Status</string>
    <string name="TextView_command">Command</string>
    <string name="TextView_status">Status</string>
    <string name="TextView_result">Result</string>
    <string name="button_unitary_test">Unitary Tests</string>
    <string name="button_loop_test">Loop Tests</string>
    <string name="loops_number">Loops number:</string>
    <string name="delay">Delay:</string>
    <string name="button_opentcp">Open TCP</string>
    <string name="button_closetcp">Close TCP</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_test_list">PclTestApp - Tests List</string>
    <string name="title_activity_detailed_test_list">PclTestApp - Detailed Tests List</string>
    <string name="title_activity_test">PclTestApp - Test</string>
    <string name="button_run">Run</string>
    <string name="str_connected">Companion is connected</string>
    <string name="str_not_connected">Companion is not connected</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="choose_device">Choose your terminal:</string>
    <string name="no_paired_device">There is no paired terminal. Pair a terminal before using this application.</string>
    <string name="app_version">Application Version: </string>
    <string name="build_date">Application Build Date: </string>
    <string name="addon_version">Add-on Version: </string>
	<string name="title_activity_bcr_setup">BCR Settings</string>
    <string name="action_settings">Settings</string>
    <string name="bcr_reader_mode">Reader Mode</string>
    <string-array name="bcr_reader_mode_array">
        <item>Single Scan</item>
        <item>Multiple Scan</item>
    </string-array>
    <string name="bcr_good_scan_beep">Good Scan Beep</string>
    <string-array name="bcr_good_scan_beep_array">
        <item>Disable</item>
        <item>One Beep</item>
        <item>Two Beeps</item>
    </string-array>
    <string name="bcr_enable_trigger">Enable Trigger</string>
    <string-array name="bcr_enable_trigger_array">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string name="bcr_imager_mode">Imager Mode</string>
    <string-array name="bcr_imager_mode_array">
        <item>1D</item>
        <item>1D2D</item>
        <item>1D2D Bright</item>
        <item>1D2D Reflective</item>
    </string-array>
    <string name="bcr_illumination_mode">Illumination Mode</string>
    <string-array name="bcr_illumination_mode_array">
        <item>Aimer and Leds</item>
        <item>Aimer only</item>
        <item>Leds only</item>
        <item>None</item>
    </string-array>
    <string name="bcr_beep_frequency">Beep Frequency</string>
    <string name="bcr_beep_length">Beep Length</string>
    <string name="bcr_lighting_goal">Lighting Goal</string>
    <string name="bcr_illumination_level">Illumination Level</string>
    <string name="bcr_lighting_mode">Lighting Mode</string>
    <string-array name="bcr_lighting_mode_array">
        <item>Illumination Priority</item>
        <item>Aperture Priority</item>
    </string-array>
    <string name="bcr_soft_reset">Soft Reset</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_apply_flash">Save</string>
    <string name="btn_symbologies">Symbologies...</string>
    <string name="hint_beep_frequency">Range:1000-5110</string>
    <string name="hint_beep_length">Range:0-2550</string>
    <string name="hint_lighting_goal">Range:0-255</string>
    <string name="hint_illumination_level">Range:0-100</string>
    <string name="title_activity_symbologies">Symbologies</string>
    <string-array name="symbo_array">
        <item>EAN13</item>
        <item>EAN8</item>
        <item>UPCA</item>
        <item>UPCE</item>
        <item>EAN13 add-on 2</item>
        <item>EAN8 add-on 2</item>
        <item>UPCA add-on 2</item>
        <item>UPCE add-on 2</item>
        <item>EAN13 add-on 5</item>
        <item>EAN8 add-on 5</item>
        <item>UPCA add-on 5</item>
        <item>UPCE add-on 5</item>
        <item>Code39</item>
        <item>Interleaved 2 of 5</item>
        <item>Standard 2 of 5</item>
        <item>Matrix 2 of 5</item>
        <item>CodaBar</item>
        <item>MSI</item>
        <item>Plessey</item>
        <item>Code128</item>
        <item>Code93</item>
        <item>Code11</item>
        <item>Telepen</item>
        <item>Code39 ItalianCPI</item>
        <item>CodaBlockA</item>
        <item>CodaBlockF</item>
        <item>PDF417</item>
        <item>GS1-128</item>
        <item>ISBT128</item>
        <item>MicroPDF</item>
        <item>GS1_DataBarOmni</item>
        <item>GS1_DataBarLimited</item>
        <item>GS1_DataBarExpanded</item>
        <item>DataMatrix</item>
        <item>QRCode</item>
        <item>Maxicode</item>
        <item>UPC-E1</item>
        <item>Aztec</item>
    </string-array>
    <string name="select_all">Select all</string>
    <string name="warning_params">Enter a value for beep frequency and beep duration</string>
    <string name="bcr_version">Version</string>
    <string name="bad_ip_address">IP address is not correct.</string>
    <string name="enable_log">Enable logs</string>
    <string name="activate_ssl">Use SSL</string>
    <string name="use_direct_connect">Direct Connect (IP)</string>
    
</resources>