<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvState"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="2dp"
        android:text=""
        android:textSize="15sp" />
    
    <TextView
        android:id="@+id/tvSerialNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvState"
        android:layout_marginTop="10dp"
        android:text="" />
        
    <CheckBox
        android:id="@+id/cbEnableLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvSerialNumber"
        android:text="@string/enable_log" />
            <TextView
        android:id="@+id/tvAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvBuildDate"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp"
        android:text="@string/app_version" />
        <TextView
        android:id="@+id/tvBuildDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvAddonVersion"
        android:layout_alignParentLeft="true"
        android:text="@string/build_date" />
    
    <TextView
        android:id="@+id/tvAddonVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/addon_version" />
    
    <Button
        android:id="@+id/button_unitary_test"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/tvAppVersion"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="25dp"
        android:text="@string/button_unitary_test" />
    
    <Button
        android:id="@+id/button_loop_test"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_unitary_test"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp"
        android:text="@string/button_loop_test" />
    
    <ScrollView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_above="@+id/button_unitary_test"
	    android:layout_alignLeft="@+id/textView1"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp" >
	    <RadioGroup 
	            android:id="@+id/optionRadioGroup"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" > 
	   </RadioGroup>
   </ScrollView>
   
   <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cbEnableLog"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/choose_device" />

   <CheckBox
       android:id="@+id/cbActivateSsl"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignRight="@+id/button_loop_test"
       android:layout_below="@+id/tvSerialNumber"
       android:text="@string/activate_ssl" />

</RelativeLayout>